--- a/Research.html
+++ b/Research.html
@@ -98,12 +98,10 @@
 
 	   <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                lang="EN-US">J. Elias,&nbsp; M.E. Rossi,&nbsp;</span></font><font
-              size="-1"><span
-                style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                lang="EN-US"> <a> The Inverse
-                system of Gorenstein Points,</a><a> </a> Israel
-                Journal of Math. (2023)  <br>
+	      lang="EN-US">J. Elias,&nbsp; M.E. Rossi,&nbsp;<a
+                  href="https://arxiv.org/pdf/2301.07056.pdf"> The Inverse
+                system of Gorenstein Points,</a> Israel
+                Journal of Math. (2023) 
 	  </span></font></li>
 
 	   <li><font size="-1"><span
@@ -198,11 +196,13 @@
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"></span></font><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                lang="EN-US">K. Ozeki, M.E. Rossi,&nbsp; <a
-                  href="publications/Ozeki.Rossi.pdf">The structure of
+                lang="EN-US">K. Ozeki, M.E. Rossi,  <a
+                 	href="https://arxiv.org/pdf/1510.08292.pdf">The structure of
                   the Sally module of integrally closed ideals</a>
-                ,&nbsp; Nagoya Math. J. 227 (2017), 49--76. <br>
-              </span></font></li>
+             Nagoya Math. J. 227 (2017), 49-76 
+		</span></font></li>
+
+		
           <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"><font size="-1"><span
@@ -210,8 +210,10 @@
                     lang="EN-US">A. Corso, C. Polini, M.E. Rossi, <a
                       href="http://arxiv.org/pdf/1410.4233v1.pdf">Bounds
                       on the normal Hilbert coefficients</a>,&nbsp;
-                    Proc. Amer. Math. Soc. 144 (2016), 1919-1930.</span></font></span></font></li>
-          <li><font size="-1"><span
+                    Proc. Amer. Math. Soc. 144 (2016), 1919-1930.</span></font></li>
+
+
+		    <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"><font size="-1"><span
                     style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
@@ -305,7 +307,10 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                                           lang="EN-US">Hayama</span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font>,
                                                     Japan (2016),&nbsp;
                                                     204--2017.</span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></li>
-          <li><font size="-1"><span
+
+
+
+						    <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"><font size="-1"><span
                     style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
@@ -317,21 +322,13 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                     lang="EN-US">M. Mandal, M.E. Rossi, <a
                       href="publications/Mandal.Rossi.pdf">The tangent
                       cone of perfect ideals of codimension two</a>,&nbsp;
-
-
-
-
-
-
-
-
-
-
-                    Acta Mathematica Vietnamita, special issue in honor
+  Acta Mathematica Vietnamita, special issue in honor
                     of N.V. Trung, 2014, Volume 40, N. 1 (2015),
                     85--100.</span></font> <br>
               </span></font></li>
-          <li><font size="-1"><span
+
+
+	      <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"><font size="-1"><span
                     style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
