--- a/Research.html
+++ b/Research.html
@@ -106,14 +106,13 @@
 
 	   <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                lang="EN-US">J. Jelisiejew,&nbsp;S. K. Masuti,&nbsp; M.E. Rossi,&nbsp;</span></font><font
-              size="-1"><span
-                style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                lang="EN-US"> <a> On the
+                lang="EN-US">J. Jelisiejew,&nbsp;S. K. Masuti,&nbsp;
+	  M.E. Rossi,&nbsp;<a
+                  href="https://arxiv.org/pdf/2202.04021.pdf">   On the
 	  Hilbert function of Artinian local
-	  complete intersections of codimension thre,</a><a>
-	  </a>J. Pure Appl. Algebra 227 (2023),
-	  no. 7, Paper No. 107326, 21 pp.  <br>
+	  complete intersections of codimension thre,</a>
+	  Journal of Pure Appl. Algebra 227 (2023),
+	  no. 7, Paper No. 107326, 21 pp.   
 	  </span></font></li>
 
 
