--- a/Research.html
+++ b/Research.html
@@ -307,7 +307,10 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                                     Japan (2016),&nbsp;
                                                     204--2017.</span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></li>
 
+  
 
+
+						    
 
 						    <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
@@ -319,12 +322,11 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"><font size="-1"><span
                     style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                     lang="EN-US">M. Mandal, M.E. Rossi, <a
-                      href="publications/Mandal.Rossi.pdf">The tangent
+                      href="http://arxiv.org/pdf/1402.2756v1.pdf">  The tangent
                       cone of perfect ideals of codimension two</a>,&nbsp;
   Acta Mathematica Vietnamita, special issue in honor
                     of N.V. Trung, 2014, Volume 40, N. 1 (2015),
-                    85--100.</span></font> <br>
-              </span></font></li>
+                    85-100. </li>
 
 
 	      <li><font size="-1"><span
