--- a/Research.html
+++ b/Research.html
@@ -360,10 +360,14 @@ href="publications/Elias-Rossi.13.pdf"> Analytically isomorphisms
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"><font size="-1"><span
                     style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                    lang="EN-US">R. Ahangari Maleki, M.E. Rossi,&nbsp;
+                    lang="EN-US">R. Ahangari Maleki, M.E. Rossi,<a
+                                    href="http://arxiv.org/pdf/1309.4538v1.pdf"  
                     Regularity and linearity defect of modules over
-                    local rings, Journal of Comm. Algebra 6, N.4 (2014)</span></font></span></font></li>
-          <li><font size="-1"><span
+                    local rings,</a>,
+				    Journal of Comm. Algebra 6, N.4 (2014)</span></font></span></font></li>
+
+
+		    <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"><font size="-1"><span
                     style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
