--- a/Research.html
+++ b/Research.html
@@ -309,24 +309,25 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
 
   
 
+ <li><font size="-1"><span
+                style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
+                lang="EN-US">Masuti, Shreedevi K.; Ozeki, Kazuho; Rossi,
+                Maria Evelina; Truong, Hoang Le, <a
+                  href="https://arxiv.org/pdf/1903.10364.pdf">On the
+                  structure of the Sally module and the second normal
+                  Hilbert coefficient,</a> Proc. Amer. Math. Soc. 148
+                (2020), no. 7, 2757–2771.</span></font></li>
 
 						    
 
 						    <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                lang="EN-US"><font size="-1"><span
-                    style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                    lang="EN-US"></span></font> </span></font><font
-              size="-1"><span
-                style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                lang="EN-US"><font size="-1"><span
-                    style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                    lang="EN-US">M. Mandal, M.E. Rossi, <a
-                      href="http://arxiv.org/pdf/1402.2756v1.pdf">  The tangent
-                      cone of perfect ideals of codimension two</a>,&nbsp;
+                lang="EN-US"> M. Mandal, M.E. Rossi, <a
+                      href="http://arxiv.org/pdf/1402.2756.pdf">  The tangent
+                      cone of perfect ideals of codimension two, </a>
   Acta Mathematica Vietnamita, special issue in honor
                     of N.V. Trung, 2014, Volume 40, N. 1 (2015),
-                    85-100. </li>
+                    85-100. </span></font></li>
 
 
 	      <li><font size="-1"><span
