--- a/Research.html
+++ b/Research.html
@@ -356,16 +356,25 @@ href="publications/Elias-Rossi.13.pdf"> Analytically isomorphisms
 
 
                                     Proc. Amer. Math. Soc. 143 (2015)
-                                    973-987.</span></font></span></font></span></font></span></font></span></font></span></font></li>
+		    973-987.</span></font></span></font></span></font></span></font></span></font></span></font></li>
+
+ <li><font size="-1"><span
+                style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
+                lang="EN-US"> M. Mandal, M.E. Rossi, <a
+                      href="http://arxiv.org/pdf/1402.2756.pdf">  The tangent
+                      cone of perfect ideals of codimension two, </a>
+  Acta Mathematica Vietnamita, special issue in honor
+                    of N.V. Trung, 2014, Volume 40, N. 1 (2015),
+                    85-100. </span></font></li>
+		    
           <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                lang="EN-US"><font size="-1"><span
-                    style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                    lang="EN-US">R. Ahangari Maleki, M.E. Rossi,<a
-                                    href="http://arxiv.org/pdf/1309.4538v1.pdf"  
+                lang="EN-US"> R. Ahangari Maleki, M.E. Rossi,<a
+                                    href="http://arxiv.org/pdf/1309.4538.pdf"> 
                     Regularity and linearity defect of modules over
                     local rings,</a>,
-				    Journal of Comm. Algebra 6, N.4 (2014)</span></font></span></font></li>
+				    Journal of Comm. Algebra 6, N.4
+                (2014)  </span></font></li>
 
 
 		    <li><font size="-1"><span
