--- a/Research.html
+++ b/Research.html
@@ -379,15 +379,14 @@ href="publications/Elias-Rossi.13.pdf"> Analytically isomorphisms
 
 		    <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                lang="EN-US"><font size="-1"><span
-                    style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                    lang="EN-US"><font size="-1"><span
-                        style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                        lang="EN-US">M.E. Rossi, L. Sega, <a
-                          href="publications/Sega-Rossi.pdf">The
+                lang="EN-US"> M.E. Rossi, L. Sega, <a
+                          href="http://arxiv.org/pdf/1211.6514.pdf">  The
                           Poincare' series of modules over
-                          compressed&nbsp; Gorenstein local rings</a>,
-                        Advances in Math. 259 (2014) 421-447. </span></font></span></font></span></font></li>
+                          compressed Gorenstein local rings</a>,
+                        Advances in Math. 259 (2014)
+		421-447 </span></font></li>
+
+		
           <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"><font size="-1"><span
