--- a/Research.html
+++ b/Research.html
@@ -120,13 +120,11 @@
 	  
           <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                lang="EN-US">J. Elias,&nbsp; M.E. Rossi,&nbsp;</span></font><font
-              size="-1"><span
-                style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                lang="EN-US"> <a
-                >A
+	  lang="EN-US">J. Elias,&nbsp; M.E. Rossi,&nbsp; <a 
+                  href="https://arxiv.org/pdf/2101.07559.pdf">   A
                   constructive approach to one-dimensional Gorenstein
-                  k-algebras,</a><a> </a>Trans. Amer. Math. Soc. 374 (2021), no. 7, 4953-4971.  <br>
+                  k-algebras,</a> Trans. Amer. Math. Soc. 374 (2021),
+                no. 7, 4953-4971 
 	  </span></font></li>
 	  
           <li><font size="-1"><span
@@ -143,7 +141,8 @@
                       2-dimensional local domains,</a>&nbsp; Nagoya
 	      Math. J. (2022), DOI 10.1017/nmj.2022.5
               </span></font> </span></font> </li>
-          <li><font size="-1"><span
+
+	      <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"><font size="-1"><span
                     style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
@@ -343,30 +342,11 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                 lang="EN-US"><font size="-1"><span
                                     style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                     lang="EN-US">J. Elias, M.E. Rossi, <a
-href="publications/Elias-Rossi.13.pdf"> Analytically isomorphisms
+ href="http://arxiv.org/pdf/1207.6919.pdf"> Analytically isomorphisms
                                       of&nbsp; compressed algebras</a>,&nbsp;
-
-
-
-
-
-
-
-
-
-
-                                    Proc. Amer. Math. Soc. 143 (2015)
+  Proc. Amer. Math. Soc. 143 (2015)
 		    973-987.</span></font></span></font></span></font></span></font></span></font></span></font></li>
 
- <li><font size="-1"><span
-                style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                lang="EN-US"> M. Mandal, M.E. Rossi, <a
-                      href="http://arxiv.org/pdf/1402.2756.pdf">  The tangent
-                      cone of perfect ideals of codimension two, </a>
-  Acta Mathematica Vietnamita, special issue in honor
-                    of N.V. Trung, 2014, Volume 40, N. 1 (2015),
-                    85-100. </span></font></li>
-		    
           <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"> R. Ahangari Maleki, M.E. Rossi,<a
@@ -408,34 +388,17 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                                 lang="EN-US">J. Elias,
                                                 M.E. Rossi,&nbsp; G.
                                                 Valla, <a
-                                                  href="publications/ERV13.pdf">On
-
-
-
-
-
-
-
-
-
-
+                                                  href=<a
+                              href="http://arxiv.org/pdf/1205.5357.pdf">On
                                                   the Hilbert function
                                                   of one-dimensional
                                                   local complete
-                                                  intersections</a>,&nbsp;
-
-
-
-
-
-
-
-
-
-
+                                                  intersections</a>,&nbsp; 
                                                 J. of Algebra 399 (2014)
                                                 489-515.&nbsp; </span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></li>
-          <li><font size="-1"><span
+
+
+						<li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"><font size="-1"><span
                     style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
@@ -445,22 +408,13 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                             style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                             lang="EN-US">A. Conca, E. De Negri, M.E.
                             Rossi, <a
-                              href="http://arxiv.org/pdf/1211.4324v1.pdf">Koszul
-
-
-
-
-
-
-
-
-
-
+                              href="http://arxiv.org/pdf/1211.4324.pdf">Koszul
                               algebras and Regularity</a>,&nbsp;
                             Commutative Algebra (in honor of D.
                             Eisenbud), 285-315, Springer, New York 2013.
                           </span></font></span></font></span></font></span></font></li>
-          <li><font size="-1"><span
+
+			  <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"><font size="-1"><span
                     style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
@@ -475,13 +429,14 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                     lang="EN-US"><font size="-1"><span
                                         style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                         lang="EN-US">G. Casnati, J.
-                                        Elias, R. Notari, M.E. Rossi, <a
-                                          href="publications/CERN13.pdf">
+                                        Elias, R. Notari, M.E. Rossi,
+                <a  href="http://arxiv.org/pdf/1005.1677.pdf">
                                           Poincare'&nbsp; series and
                                           deformations of Gorenstein
                                           local algebras</a>, Comm. In
                                         Algebra. 41 (2013), 1049--1059.</span></font></span></font></span></font></span></font></span></font></span></font></span></font></li>
-          <li><font size="-1"><span
+
+					<li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"><font size="-1"><span
                     style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
@@ -499,24 +454,15 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                             lang="EN-US">J. Elias, M. E.
                                             Rossi, <a
-                                              href="publications/inverse-system-Final.pdf">Isomorphism
-
-
-
-
-
-
-
-
-
-
-                                              classes of Artinian local
-                                              rings via Macaulay's
-                                              inverse system</a>,&nbsp;
+                                              href="http://arxiv.org/pdf/0911.3565.pdf">Isomorphism
+classes of Artinian local  rings via Macaulay's
+                                              inverse system</a> 
                                             Trans. A.M.S. Volume 364,
                                             Number 9, (2012), Pages
                                             4589–4604.</span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></li>
-          <li><font size="-1"><span
+
+
+					    <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"><font size="-1"><span
                     style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
@@ -533,21 +479,8 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                         lang="EN-US"><font size="-1"><span
 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                             lang="EN-US">M.E.
-                                            Rossi,&nbsp; <a
-                                              href="Hilbert%20Functions%20%20of%20Cohen-Macaulay%20local%20rings">Hilbert
-
-
-
-
-
-
-
-
-
-
-
-                                              Functions&nbsp; of
-                                              Cohen-Macaulay local rings</a>,
+                                            Rossi,&nbsp; Hilbert
+                Functions&nbsp; of Cohen-Macaulay local rings,
                                             "Commutative Algebra and its
                                             Connections to Geometry",
                                             Contemporary Mathematics
@@ -572,20 +505,9 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                                 lang="EN-US"><b>(Monograph)</b>
                                                 M.E. Rossi, G.
-                                                Valla,&nbsp; <a
-                                                  href="publications/Monografia.pdf">Hilbert
-
-
-
-
-
-
-
-
-
-
-
-                                                  Function of filtered
+                                                Valla,&nbsp; <a 
+                                              href="http://arxiv.org/pdf/0710.2346.pdf">   
+  Hilbert Function of filtered
                                                   modules</a>,
                                                 Springer-UMI Lecture
                                                 Notes in Mathematics,
@@ -638,47 +560,15 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                                           lang="EN-US"><font
                                                           size="-1"><span
 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                                                          lang="EN-US">M.
-
-
-
-
-
-
-
-
-
-
+                                                          lang="EN-US">M. 
                                                           E. Rossi, L.
                                                           Sharifan,&nbsp;
-                                                          <a
-href="file:///Users/rossi/Desktop/simple3/publications/PAMS.Rossi-Sharifan.pdf">Consecutive
-
-
-
-
-
-
-
-
-
-
-
+                                                          <a  href="http://arxiv.org/pdf/0904.1086.pdf">Consecutive 
                                                           cancellations
                                                           in Betti
                                                           numbers of
-                                                          local rings</a>,&nbsp;
-
-
-
-
-
-
-
-
-
-
-
+                                                          local
+                                                          rings</a>,&nbsp; 
                                                           Proc. Amer.
                                                           Math. Soc. 138
                                                           (2010), 61-73.
