--- a/Research.html
+++ b/Research.html
@@ -369,33 +369,16 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
 		
           <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                lang="EN-US"><font size="-1"><span
-                    style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                    lang="EN-US"><font size="-1"><span
-                        style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                        lang="EN-US"><font size="-1"><span
-                            style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                            lang="EN-US"><font size="-1"><span
-                                style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                                lang="EN-US"><font size="-1"><span
-                                    style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                                    lang="EN-US"><font size="-1"><span
-                                        style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                                        lang="EN-US"><font size="-1"><span
-style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                                            lang="EN-US"><font size="-1"><span
-style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                                                lang="EN-US">J. Elias,
-                                                M.E. Rossi,&nbsp; G.
-                                                Valla, <a
-                                                  href=<a
-                              href="http://arxiv.org/pdf/1205.5357.pdf">On
+                lang="EN-US"> J. Elias,  M.E. Rossi,&nbsp; G.
+                                                Valla, <a 
+                              href="http://arxiv.org/pdf/1205.5357.pdf">
+                On
                                                   the Hilbert function
                                                   of one-dimensional
                                                   local complete
-                                                  intersections</a>,&nbsp; 
+                                                  intersections</a>,  
                                                 J. of Algebra 399 (2014)
-                                                489-515.&nbsp; </span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></li>
+                                                489-515 </span></font></li>
 
 
 						<li><font size="-1"><span
