--- a/Research.html
+++ b/Research.html
@@ -604,7 +604,7 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                                 lang="EN-US">M. E.
                                                 Rossi, L. Sharifan, <a
-href="publications/J.Algebra.Rossi.pdf"> Minimal free resolution&nbsp;
+ href="http://arxiv.org/pdf/0804.4442.pdf">  Minimal free resolution&nbsp;
                                                   of a finitely
                                                   generated module&nbsp;
                                                   over a regular local
@@ -638,39 +638,19 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                                         lang="EN-US">A.
                                                         Conca, E. De
                                                         Negri, M. E.
-                                                        Rossi, <a
-href="http://www.dima.unige.it/%7Econca/Articoli%20Conca%20PDF/PDF%20da%20rivista/%282010%29%20Conca%20DeNegri%20Rossi%20%20-%20Integrally%20closed%20and%20componentwise%20linear%20ideals.pdf">Integrally
-
-
-
-
-
-
-
-
-
-
-
+                                                        Rossi, <a  href=
+"http://arxiv.org/pdf/0801.3373.pdf">Integrally 
                                                           closed
                                                           and&nbsp;
                                                           componentwise
                                                           linear ideals</a>,&nbsp;&nbsp;
-
-
-
-
-
-
-
-
-
-
-
+ 
                                                         Math. Z.&nbsp;
                                                         (2010),
                                                         published on
                                                         line: DOI
-                                                        10.1007/s00209-009-0537-4</span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></li>
+10.1007/s00209-009-0537-4</span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></li>
+
           <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"><font size="-1"><span
@@ -698,25 +678,11 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                                         lang="EN-US"><font
                                                           size="-1"><span
 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                                                          lang="EN-US">M.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+                                                          lang="EN-US">M. 
                                                           E. Rossi, G.
                                                           Valla, &nbsp;
                                                           <a
-                                                          href="http://arxiv.org/abs/0804.4438">On
+                                                          href="http://arxiv.org/pdf/0804.4438">On
 
 
 
@@ -795,7 +761,7 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                                           Negri, M. E.
                                                           Rossi, &nbsp;
                                                           <a
-href="http://www.dima.unige.it/%7Econca/Articoli%20Conca%20PDF/PDF%20da%20rivista/%282007%29%20Conca%20DeNegri%20Rossi%20-Contracted%20ideals%20and%20%20the%20Grobner%20fan%20of%20the%20rational%20normal%20curve.pdf">
+href= href="http://arxiv.org/pdf/0705.3767">  
                                                           Contracted
                                                           ideals and the
                                                           Groebner fan
@@ -883,7 +849,7 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                                           Rossi, N.V.
                                                           Trung, G.
                                                           Valla,&nbsp; <a
-href="publications/Ro_Tr_Va.pdf"> Castelnuovo-Mumford regularity and
+href= href="http://arxiv.org/pdf/0407398/pdf"> Castelnuovo-Mumford regularity and
                                                           finiteness of
                                                           Hilbert
                                                           functions</a>,&nbsp;
