--- a/Research.html
+++ b/Research.html
@@ -395,8 +395,8 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                               algebras and Regularity</a>,&nbsp;
                             Commutative Algebra (in honor of D.
                             Eisenbud), 285-315, Springer, New York 2013.
-                          </span></font></span></font></span></font></span></font></li>
-
+						</span></font></li>
+						
 			  <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"><font size="-1"><span
@@ -417,32 +417,19 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                           Poincare'&nbsp; series and
                                           deformations of Gorenstein
                                           local algebras</a>, Comm. In
-                                        Algebra. 41 (2013), 1049--1059.</span></font></span></font></span></font></span></font></span></font></span></font></span></font></li>
-
+                                        Algebra. 41 (2013),
+						1049--1059. </span></font></li>
+						
 					<li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                lang="EN-US"><font size="-1"><span
-                    style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                    lang="EN-US"><font size="-1"><span
-                        style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                        lang="EN-US"><font size="-1"><span
-                            style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                            lang="EN-US"><font size="-1"><span
-                                style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                                lang="EN-US"><font size="-1"><span
-                                    style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                                    lang="EN-US"><font size="-1"><span
-                                        style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                                        lang="EN-US"><font size="-1"><span
-style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                                            lang="EN-US">J. Elias, M. E.
+                lang="EN-US"> J. Elias, M. E.
                                             Rossi, <a
                                               href="http://arxiv.org/pdf/0911.3565.pdf">Isomorphism
 classes of Artinian local  rings via Macaulay's
                                               inverse system</a> 
                                             Trans. A.M.S. Volume 364,
                                             Number 9, (2012), Pages
-                                            4589–4604.</span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></li>
+                                            4589–4604. </span></font></li>
 
 
 					    <li><font size="-1"><span
@@ -584,29 +571,13 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                             Meiji University, Institute
                                             of Mathematics&nbsp;
                                             (2009),&nbsp; 8--44.</span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></li>
-          <li><font size="-1"><span
+
+					    <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                lang="EN-US"><font size="-1"><span
-                    style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                    lang="EN-US"><font size="-1"><span
-                        style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                        lang="EN-US"><font size="-1"><span
-                            style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                            lang="EN-US"><font size="-1"><span
-                                style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                                lang="EN-US"><font size="-1"><span
-                                    style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                                    lang="EN-US"><font size="-1"><span
-                                        style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                                        lang="EN-US"><font size="-1"><span
-style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                                            lang="EN-US"><font size="-1"><span
-style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                                                lang="EN-US">M. E.
-                                                Rossi, L. Sharifan, <a
- href="http://arxiv.org/pdf/0804.4442.pdf">  Minimal free resolution&nbsp;
-                                                  of a finitely
-                                                  generated module&nbsp;
+                lang="EN-US"> M. E.
+                                                Rossi, L. Sharifan,<a
+                href="http://arxiv.org/pdf/0804.4442.pdf">  Minimal
+                free resolutio of a finitely   generated module 
                                                   over a regular local
                                                   ring</a>,&nbsp;
                                                 Journal of Algebra 322
