--- a/Research.html
+++ b/Research.html
@@ -731,8 +731,7 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                                           Conca, E. De
                                                           Negri, M. E.
                                                           Rossi, &nbsp;
-                                                          <a
-href= href="http://arxiv.org/pdf/0705.3767">  
+                                                          <a href="http://arxiv.org/pdf/0705.3767.pdf">  
                                                           Contracted
                                                           ideals and the
                                                           Groebner fan
